# RosTrajectoryTracking

./: README.md
custom_nav/: CMakeLists.txt  package.xml
custom_nav/config/: base_local_planner_params.yaml
custom_nav/launch/: custom_nav.launch
custom_planner/: CMakeLists.txt  custom_planner_plugin.xml  package.xml
custom_planner/include/custom_planner/: custom_planner.h
custom_planner/src/: custom_planner.cpp
gtt_nav/: CMakeLists.txt  package.xml
gtt_nav/config/: gtt_planner_params.yaml  move_base_params.yaml
gtt_nav/launch/: gtt_nav.launch
gtt_nav/rviz/: gtt.rviz
gtt_planner/: CMakeLists.txt  gtt_planner_plugin.xml  package.xml
gtt_planner/cfg/: GttPlanner.cfg
gtt_planner/include/gtt_planner/: astar.h  dijkstra.h  expander.h  global_trajectory.h  gradient_path.h  grid_path.h  gtt_planner.h  orientation_filter.h  potential_calculator.h  quadratic_calculator.h  traceback.h
gtt_planner/path/: default.yaml  test.yaml
gtt_planner/scripts/: path_gen.py
gtt_planner/src/: astar.cpp  dijkstra.cpp  global_trajectory.cpp  gradient_path.cpp  grid_path.cpp  gtt_planner.cpp  gtt_planner_node.cpp  orientation_filter.cpp  quadratic_calculator.cpp
